# fhr_imaging_simulation

./: Abs(u).html  README.md  Re(u).html  environment.yml  example_helmholtz.py  export_function.py  mesh_test.h5  mesh_test.msh  mesh_test.xdmf  mesh_test_boundaries.h5  mesh_test_boundaries.xdmf  pyproject.toml  requirements.txt  script.py  visualize_deformed_mesh.py  wavenumber.html
2d_HH_dolfin_ver/: create_mesh_with_hole.py  script.py  script_dirichlet.py  script_scatter.py
2d_RT_helmholtz/: Abs(u).html  Re(u).html  domain.msh  mesh_generation.py  simulation.py  wavenumber.html
2d_RT_helmholtz_TX_RX/: mesh_generation.py  simulation.py
2d_RT_helmholtz_TX_RX_real_PS/: mesh_generation.py  simulation.py
2d_RT_helmholtz_TX_RX_real_RB/: Abs(u).html  Re(u).html  domain.msh  mesh_generation.py  simulation.py
2d_RT_helmholtz_real/: Abs(u) copy.html  Abs(u).html  Re(u).html  simulation.py
2d_RT_helmholtz_scatter/: Abs(u).html  Re(u).html  simulation.py  wavenumber.html
HH_shape_opt/: helmholtz_solve.py  initialize_opt.py  mesh_generation.py  process_result.py  save_result.py  util.py
data/: ant_pos.txt  freq_vec.mat
entire_obstacle_scan/: forward_sim_data.csv  forward_sim_data_half.csv  forward_sim_datagen.py  mesh_generation.py  opt_script.py  opt_script2.py  plot.py
examples/: Abs(u).html  domain.msh  helmholtz_example.ipynb  helmholtz_example.py  mesh_generation.py  wavenumber.html
matlab_fwd_sims/: measurements.csv  measurements_avg.csv  scattering_problem.asv  scattering_problem.m
mesh_deformation/: simulation.py
metal_ball_results/: Abs(u).html  (+1 more)
(+361 files in other folders)
